# kira-microenvironment

./: Cargo.toml  METRICS.md  PIPELINE.md  README.md  anti_markers.tsv  marker_panels.tsv  marker_panels_coarse.tsv
resources/: cofactors_mvp.tsv  labels_mvp_immune.tsv  labels_mvp_onco.tsv  lr_pairs_mvp_immune.tsv  lr_pairs_mvp_onco.tsv
resources_immune/: gene_alias.tsv
resources_onco/: regime_map.tsv
src/: cli.rs  determinism.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs  select.rs  version.rs
src/agg/: reader.rs
src/auto_groups/: anti.rs  assign.rs  coarse.rs  fine.rs  hierarchy.rs  markers.rs  mod.rs  output.rs  summary.rs
src/expr/: format.rs  mod.rs  reader.rs
src/io/: atomic.rs  format.rs  input.rs  json.rs  mmap.rs  mod.rs  tsv.rs
src/metrics/: mod.rs
src/metrics/microenv_extension/: aggregate.rs  panels.rs  scores.rs
src/resources/: aliases.rs  cofactors.rs  embedded.rs  labels.rs  lr_pairs.rs  mod.rs  regime_map.rs
src/simd/: dispatch.rs
src/stages/: mod.rs  stage0_resolve.rs  stage1_agg.rs  stage2_score.rs  stage3_network.rs  stage4_link.rs  stage5_microenv_extension.rs
tests/: auto_groups.rs  auto_groups_hierarchical.rs  e2e_pipeline.rs  expr_kiramtx.rs  stage0_validate.rs  stage1_agg.rs  stage2_score.rs  stage3_network.rs  stage4_link.rs  stage5_microenv_extension.rs
