[package]
name = "kira-microenvironment"
description = "Deterministic, explainable ligand-receptor microenvironment interaction scoring for single-cell expression data."
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-microenvironment"
keywords = [
    "bioinformatics",
    "microenvironment",
    "cell",
    "sc-rna",
    "oncology"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "command-line-utilities"
]

[lib]
name = "kira_environment"
path = "src/lib.rs"

[[bin]]
name = "kira-microenvironment"
path = "src/main.rs"

[features]
default = []
strict-fsync = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
kira-scio = "0.1"


[dev-dependencies]
tempfile = "3.15"
